# l2-arb-bot-nitro-backrun

./: .gitignore  Cargo.toml
.claude/: settings.local.json
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/engine/: mod.rs  optimizer.rs
src/execution/: mod.rs
src/feed/: message.rs  mod.rs  transaction.rs
src/pool/: manager.rs  mod.rs
tests/: arbitrage_integration_test.rs
tests/contracts/: ArbitrageExecutor.sol  MockERC20.sol  MockUniswapV2Pair.sol
